Placing the structure of the bar to listen to the music, and the menu placing its colors

--- a/code/index.html
+++ b/code/index.html
@@ -12,6 +12,7 @@
     <header>
         <div class="menu--panel"></div>
         <div class="song--panel"></div>
+        <div class="Play--music"></div>
     </header>
 </body>
 </html>
