--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,14 @@
 </head>
 <body>
     <header>
-        <div class="menu--panel"></div>
+        <div class="menu--panel">
+            <h1>Playlist</h1>
+            <div class="Playlist">
+                <h3 class="Activo--boostrap"><span></span><i class="bi bi-music-note-beamed"></i>Playlist</h3>
+                <h3 class="Activo--boostrap"><span></span><i class="bi bi-music-note-beamed"></i>Last play</h3>
+                <h3 class="Activo--boostrap"><span></span><i class="bi bi-music-note-beamed"></i>recommended</h3>
+            </div>
+        </div>
         <div class="song--panel"></div>
         <div class="Play--music"></div>
     </header>
