--- a/code/index.html
+++ b/code/index.html
@@ -17,6 +17,53 @@
                 <h3 class="Activo--boostrap"><span></span><i class="bi bi-music-note-beamed"></i>Last play</h3>
                 <h3 class="Activo--boostrap"><span></span><i class="bi bi-music-note-beamed"></i>recommended</h3>
             </div>
+            <div class="menu--songs">
+                <li class="SongMusic">
+                    <span>01</span>
+                    <img src="../imagen/DeiV.JPEG" alt="no se puede ver la imagen" title="Dei v">
+                    <h5>
+                        X2
+                        <div class="subTitle">Dei V</div>
+                        <i class="bi bi-play-circle-fill PlaylistPlay" id="1"></i>
+                    </h5>
+                </li>
+                <li class="SongMusic">
+                    <span>01</span>
+                    <img src="../imagen/DeiV.JPEG" alt="no se puede ver la imagen" title="Dei v">
+                    <h5>
+                        X2
+                        <div class="subTitle">Dei V</div>
+                        <i class="bi bi-play-circle-fill PlaylistPlay" id="1"></i>
+                    </h5>
+                </li>
+                <li class="SongMusic">
+                    <span>01</span>
+                    <img src="../imagen/DeiV.JPEG" alt="no se puede ver la imagen" title="Dei v">
+                    <h5>
+                        X2
+                        <div class="subTitle">Dei V</div>
+                        <i class="bi bi-play-circle-fill PlaylistPlay" id="1"></i>
+                    </h5>
+                </li>
+                <li class="SongMusic">
+                    <span>01</span>
+                    <img src="../imagen/DeiV.JPEG" alt="no se puede ver la imagen" title="Dei v">
+                    <h5>
+                        X2
+                        <div class="subTitle">Dei V</div>
+                        <i class="bi bi-play-circle-fill PlaylistPlay" id="1"></i>
+                    </h5>
+                </li>
+                <li class="SongMusic">
+                    <span>01</span>
+                    <img src="../imagen/DeiV.JPEG" alt="no se puede ver la imagen" title="Dei v">
+                    <h5>
+                        X2
+                        <div class="subTitle">Dei V</div>
+                        <i class="bi bi-play-circle-fill PlaylistPlay" id="1"></i>
+                    </h5>
+                </li>
+            </div>
         </div>
         <div class="song--panel"></div>
         <div class="Play--music"></div>
