You start with play-music and make an animation

--- a/code/index.html
+++ b/code/index.html
@@ -28,7 +28,7 @@
                     </h5>
                 </li>
                 <li class="SongMusic">
-                    <span>01</span>
+                    <span>02</span>
                     <img src="../imagen/DeiV.JPEG" alt="no se puede ver la imagen" title="Dei v">
                     <h5>
                         X2
@@ -37,7 +37,7 @@
                     </h5>
                 </li>
                 <li class="SongMusic">
-                    <span>01</span>
+                    <span>03</span>
                     <img src="../imagen/DeiV.JPEG" alt="no se puede ver la imagen" title="Dei v">
                     <h5>
                         X2
@@ -46,7 +46,7 @@
                     </h5>
                 </li>
                 <li class="SongMusic">
-                    <span>01</span>
+                    <span>04</span>
                     <img src="../imagen/DeiV.JPEG" alt="no se puede ver la imagen" title="Dei v">
                     <h5>
                         X2
@@ -55,7 +55,7 @@
                     </h5>
                 </li>
                 <li class="SongMusic">
-                    <span>01</span>
+                    <span>05</span>
                     <img src="../imagen/DeiV.JPEG" alt="no se puede ver la imagen" title="Dei v">
                     <h5>
                         X2
@@ -66,7 +66,15 @@
             </div>
         </div>
         <div class="song--panel"></div>
-        <div class="Play--music"></div>
+
+
+        <div class="Play--music">
+            <div class="Waves">
+                <div class="Wave1"></div>
+                <div class="Wave1"></div>
+                <div class="Wave1"></div>
+            </div>
+        </div>
     </header>
 </body>
 </html>
