The frotend mocho calls me

--- a/code/index.html
+++ b/code/index.html
@@ -95,6 +95,15 @@
                 <div class="dotted"></div>
             </div>
             <span id="EndItems">0:00</span>
+
+            <div class="vol__music">
+                <div class="Bar__vol">
+                    <i class="bi bi-volume-up"></i>
+                    <input id="seek--vol" min="0" value="0" max="100" type="range">
+                    <div class="bar__vol2"></div>
+                    <div class="dotted__music"></div>
+                </div>
+            </div>
         </div>
     </header>
 </body>
