The page navigation bar is added with my logo

--- a/code/index.html
+++ b/code/index.html
@@ -69,7 +69,22 @@
                 </li>
             </div>
         </div>
-        <div class="song--panel"></div>
+        <div class="song--panel">
+            <nav>
+                <ul>
+                    <li>My Music</li>
+                    <li>My library</li>
+                    <li>Radio</li>
+                </ul>
+                <div class="search">
+                    <i class="bi bi-search"></i>
+                    <input type="search" placeholder="search music">
+                </div>
+                <div class="User--page">
+                    <img src="../imagen/Logo.jpg">
+                </div>
+            </nav>
+        </div>
 
 
         <div class="Play--music">
