Added some more details to the navigation bar

--- a/code/index.html
+++ b/code/index.html
@@ -81,7 +81,7 @@
                     <input type="search" placeholder="search music">
                 </div>
                 <div class="User--page">
-                    <img src="../imagen/Logo.jpg">
+                    <img src="../imagen/Logo.jpg" alt="No se puede ver la imagen" title="JoSantana0005">
                 </div>
             </nav>
         </div>
