The content__sing div and some buttons are added

--- a/code/index.html
+++ b/code/index.html
@@ -84,6 +84,17 @@
                     <img src="../imagen/Logo.jpg" alt="No se puede ver la imagen" title="JoSantana0005">
                 </div>
             </nav>
+            <div class="content__page">
+                <h1>Dei V</h1>
+                <p>
+                    David Gerardo Rivera Juarbe (Carolina, December 26, 1995), known musically as Dei V, is a Puerto Rican rapper and songwriter.
+                    His recording debut was in 2021 with his extended play Ying Yang, however his international recognition would only be in 2023 with "Who is Dei V?"
+                </p>
+            </div>
+            <div class="Buttons--sing">
+                <button>Play</button>
+                <button>Follow</button>
+            </div>
         </div>
 
 
