--- a/code/index.html
+++ b/code/index.html
@@ -95,6 +95,97 @@
                 <button>Play</button>
                 <button>Follow</button>
             </div>
+            <div class="Popular__songs">
+                <div class="Title__h4">
+                    <h4>Popular Songs</h4>
+                    <div class="Btn__icon">
+                        <i id="Left--scroll--panel"class="bi bi-arrow-left-short"></i>
+                        <i id="right--scroll--panel"class="bi bi-arrow-right-short"></i>
+                    </div>
+                </div>
+                <div class="Music">
+                    <li class="SongItmes">
+                        <div class="Imagen__play">
+                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <i class="bi bi-play-circle-fill"></i>
+                        </div>
+                        <h5>Verde Menta
+                            <div class="subtitle">Rauw Alejandro</div>
+                        </h5>
+                    </li>
+                    <li class="SongItmes">
+                        <div class="Imagen__play">
+                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <i class="bi bi-play-circle-fill"></i>
+                        </div>
+                        <h5>Verde Menta
+                            <div class="subtitle">Rauw Alejandro</div>
+                        </h5>
+                    </li>
+                    <li class="SongItmes">
+                        <div class="Imagen__play">
+                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <i class="bi bi-play-circle-fill"></i>
+                        </div>
+                        <h5>Verde Menta
+                            <div class="subtitle">Rauw Alejandro</div>
+                        </h5>
+                    </li>
+                    <li class="SongItmes">
+                        <div class="Imagen__play">
+                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <i class="bi bi-play-circle-fill"></i>
+                        </div>
+                        <h5>Verde Menta
+                            <div class="subtitle">Rauw Alejandro</div>
+                        </h5>
+                    </li>
+                    <li class="SongItmes">
+                        <div class="Imagen__play">
+                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <i class="bi bi-play-circle-fill"></i>
+                        </div>
+                        <h5>Verde Menta
+                            <div class="subtitle">Rauw Alejandro</div>
+                        </h5>
+                    </li>
+                    <li class="SongItmes">
+                        <div class="Imagen__play">
+                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <i class="bi bi-play-circle-fill"></i>
+                        </div>
+                        <h5>Verde Menta
+                            <div class="subtitle">Rauw Alejandro</div>
+                        </h5>
+                    </li>
+                    <li class="SongItmes">
+                        <div class="Imagen__play">
+                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <i class="bi bi-play-circle-fill"></i>
+                        </div>
+                        <h5>Verde Menta
+                            <div class="subtitle">Rauw Alejandro</div>
+                        </h5>
+                    </li>
+                    <li class="SongItmes">
+                        <div class="Imagen__play">
+                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <i class="bi bi-play-circle-fill"></i>
+                        </div>
+                        <h5>Verde Menta
+                            <div class="subtitle">Rauw Alejandro</div>
+                        </h5>
+                    </li><li class="SongItmes">
+                        <div class="Imagen__play">
+                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <i class="bi bi-play-circle-fill"></i>
+                        </div>
+                        <h5>Verde Menta
+                            <div class="subtitle">Rauw Alejandro</div>
+                        </h5>
+                    </li>
+                </div>
+            </div>
         </div>
 
 
