Music--panel and Singer--panel

--- a/code/index.html
+++ b/code/index.html
@@ -115,75 +115,101 @@
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <img src="../imagen/AfrodisiacoRauw.jpeg" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill"></i>
                         </div>
-                        <h5>Verde Menta
+                        <h5>De Cora
                             <div class="subtitle">Rauw Alejandro</div>
                         </h5>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <img src="../imagen/Bigsoto.jpg" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill"></i>
                         </div>
-                        <h5>Verde Menta
-                            <div class="subtitle">Rauw Alejandro</div>
+                        <h5>Soñador
+                            <div class="subtitle">Big Soto</div>
                         </h5>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <img src="../imagen/MoraParaiso.jpeg" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill"></i>
                         </div>
-                        <h5>Verde Menta
-                            <div class="subtitle">Rauw Alejandro</div>
+                        <h5>Domingo de Bote
+                            <div class="subtitle">Mora</div>
                         </h5>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <img src="../imagen/BadBunny100pre.jpeg" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill"></i>
                         </div>
-                        <h5>Verde Menta
-                            <div class="subtitle">Rauw Alejandro</div>
+                        <h5>RLDNT
+                            <div class="subtitle">Bad Bunny</div>
                         </h5>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <img src="../imagen/MoraEstrella.jpeg" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill"></i>
                         </div>
-                        <h5>Verde Menta
-                            <div class="subtitle">Rauw Alejandro</div>
+                        <h5>Fantasias
+                            <div class="subtitle">Mora</div>
                         </h5>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <img src="../imagen/BadBunnyYHLQMDLG.JPEG" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill"></i>
                         </div>
-                        <h5>Verde Menta
-                            <div class="subtitle">Rauw Alejandro</div>
+                        <h5>A tu merced
+                            <div class="subtitle">Bad Bunny</div>
                         </h5>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <img src="../imagen/BadBunnySalir.png" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill"></i>
                         </div>
-                        <h5>Verde Menta
-                            <div class="subtitle">Rauw Alejandro</div>
+                        <h5>Bye me fui
+                            <div class="subtitle">Bad Bunny</div>
                         </h5>
                     </li><li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <img src="../imagen/OzunaOdisea.jpeg" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill"></i>
                         </div>
-                        <h5>Verde Menta
-                            <div class="subtitle">Rauw Alejandro</div>
+                        <h5>Quiero Repetir
+                            <div class="subtitle">Ozuna</div>
                         </h5>
                     </li>
+                </div>
+                <div class="Sing__popular">
+                    <div class="Title__h4">
+                        <h4>Popular Singer</h4>
+                        <div class="Btn__icon">
+                            <i id="Left--scroll--panel"class="bi bi-arrow-left-short"></i>
+                            <i id="right--scroll--panel"class="bi bi-arrow-right-short"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="Artists">
+                    <img src="../imagen/mora.jpeg" alt="No se puede ver la imagen">
+                    <img src="../imagen/Ozuna.jpeg" alt="No se puede ver la imagen">
+                    <img src="../imagen/badbunny.jpeg" alt="No se puede ver la imagen">
+                    <img src="../imagen/DeiV.JPEG" alt="No se puede ver la imagen">
+                    <img src="../imagen/Justin-Quiles.png" alt="No se puede ver la imagen">
+                    <img src="../imagen/mora.jpeg" alt="No se puede ver la imagen">
+                    <img src="../imagen/mora.jpeg" alt="No se puede ver la imagen">
+                    <img src="../imagen/mora.jpeg" alt="No se puede ver la imagen">
+                    <img src="../imagen/mora.jpeg" alt="No se puede ver la imagen">
+                    <img src="../imagen/mora.jpeg" alt="No se puede ver la imagen">
+                    <img src="../imagen/mora.jpeg" alt="No se puede ver la imagen">
+                    <img src="../imagen/mora.jpeg" alt="No se puede ver la imagen">
+                    <img src="../imagen/mora.jpeg" alt="No se puede ver la imagen">
+                    <img src="../imagen/mora.jpeg" alt="No se puede ver la imagen">
+                    <img src="../imagen/mora.jpeg" alt="No se puede ver la imagen">
                 </div>
             </div>
         </div>
