The first audios are added with js and also some things on the frontend are fixed and other images are added and js is started

--- a/code/index.html
+++ b/code/index.html
@@ -68,7 +68,7 @@
                     <i class="bi bi-play-circle-fill PlaylistPlay" id="5"></i>
                 </li>
                 <li class="SongMusic">
-                    <span>05</span>
+                    <span>06</span>
                     <img src="../imagen/DeiV.JPEG" alt="no se puede ver la imagen" title="Dei v">
                     <h5>
                         X2
@@ -206,62 +206,72 @@
                 <div class="Artists">
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen" title="Myke towers">
+                            <img src="../imagen/Myketowers.jpeg" alt="No se pued ver la imagen" title="Myke towers">
                         </div>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/AfrodisiacoRauw.jpeg" alt="No se pued ver la imagen" title="Becky G">
+                            <img src="../imagen/beckyG.jpeg" alt="No se pued ver la imagen" title="Becky G">
                         </div>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/Bigsoto.jpg" alt="No se pued ver la imagen" title="Camilo">
+                            <img src="../imagen/feid.jpeg" alt="No se pued ver la imagen" title="Feid">
                         </div>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/MoraParaiso.jpeg" alt="No se pued ver la imagen" title="Los amigos invisibles">
+                            <img src="../imagen/Invisibles.jpeg" alt="No se pued ver la imagen" title="Los amigos invisibles">
                         </div>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/BadBunny100pre.jpeg" alt="No se pued ver la imagen" title="Rawayana">
+                            <img src="../imagen/rawayanajpeg.jpeg" alt="No se pued ver la imagen" title="Rawayana">
                         </div>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/MoraEstrella.jpeg" alt="No se pued ver la imagen" title="Jhay Cortez">
+                            <img src="../imagen/mora.jpeg" alt="No se pued ver la imagen" title="Mora">
                         </div>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/BadBunnyYHLQMDLG.JPEG" alt="No se pued ver la imagen" title="J balvin">
+                            <img src="../imagen/badbunny.jpeg" alt="No se pued ver la imagen" title="bad Bunny">
                         </div>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/BadBunnySalir.png" alt="No se pued ver la imagen" title="Red hot chill peppers">
+                            <img src="../imagen/red.jpeg" alt="No se pued ver la imagen" title="Red hot chill peppers">
                         </div>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/OzunaOdisea.jpeg" alt="No se pued ver la imagen" title="Mora">
+                            <img src="../imagen/Jbalvin.jpeg" alt="No se pued ver la imagen" title="J balvin">
                         </div>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/OzunaOdisea.jpeg" alt="No se pued ver la imagen" title="Bad Bunny">
+                            <img src="../imagen/Ozuna.jpeg" alt="No se pued ver la imagen" title="Ozuna">
                         </div>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/OzunaOdisea.jpeg" alt="No se pued ver la imagen" title="Justin Quiles">
+                            <img src="../imagen/travis.jpeg" alt="No se pued ver la imagen" title="Travis Scott">
                         </div>
                     </li>
                     <li class="SongItmes">
                         <div class="Imagen__play">
-                            <img src="../imagen/OzunaOdisea.jpeg" alt="No se pued ver la imagen" title="Justin Quiles">
+                            <img src="../imagen/Drake.jpeg" alt="No se pued ver la imagen" title="Drake">
+                        </div>
+                    </li>
+                    <li class="SongItmes">
+                        <div class="Imagen__play">
+                            <img src="../imagen/JustinQuiles.jpeg" alt="No se pued ver la imagen" title="Justin Quiles">
+                        </div>
+                    </li>
+                    <li class="SongItmes">
+                        <div class="Imagen__play">
+                            <img src="../imagen/jhaycortez.jpeg" alt="No se pued ver la imagen" title="Jhay Cortez">
                         </div>
                     </li>
                 </div>
@@ -302,4 +312,5 @@
         </div>
     </header>
 </body>
+<script src="app.js"></script>
 </html>
