Added the event to pause the song and play the song

--- a/code/index.html
+++ b/code/index.html
@@ -291,9 +291,9 @@
                 <div class="subtitle">Dei V</div>
             </h5>
             <div class="icon--play">
-                <i class="bi bi-arrow-bar-left"></i>
-                <i class="bi bi-play-fill"></i>
-                <i class="bi bi-arrow-bar-right"></i>
+                <i class="bi bi-arrow-bar-left" id="Back-music"></i>
+                <i class="bi bi-play-fill" id="MasterPlay"></i>
+                <i class="bi bi-arrow-bar-right" id="Next-music"></i>
             </div>
             <span id="StartItems">0:00</span>
             <div class="Bar__music">
