The event is placed to listen to the songs in the playlist, and the names of the songs have been changed

--- a/code/index.html
+++ b/code/index.html
@@ -281,11 +281,11 @@
 
         <div class="Play--music">
             <div class="Waves">
-                <div class="Wave1"></div>
-                <div class="Wave1"></div>
-                <div class="Wave1"></div>
+                <div class="Wave1 "></div>
+                <div class="Wave1 "></div>
+                <div class="Wave1 "></div>
             </div>
-            <img src="../imagen/DeiV.JPEG" alt="no se puede ver la iamgen">
+            <img src="../imagen/DeiV.JPEG" alt="no se puede ver la iamgen" id="Poster">
             <h5>
                 X2
                 <div class="subtitle">Dei V</div>
