Fixed the icons

--- a/code/index.html
+++ b/code/index.html
@@ -285,10 +285,10 @@
                 <div class="Wave1 "></div>
                 <div class="Wave1 "></div>
             </div>
-            <img src="../imagen/DeiV.JPEG" alt="no se puede ver la iamgen" id="Poster">
-            <h5>
+            <img src="../imagen/1.JPEG" alt="no se puede ver la iamgen" id="Poster">
+            <h5 id="title">
                 X2
-                <div class="subtitle">Dei V</div>
+                <div class="subTitle">Dei V</div>
             </h5>
             <div class="icon--play">
                 <i class="bi bi-arrow-bar-left" id="Back-music"></i>
