new Event input duration music

--- a/code/index.html
+++ b/code/index.html
@@ -204,72 +204,72 @@
                     </div>
                 </div>
                 <div class="Artists">
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/Myketowers.jpeg" alt="No se pued ver la imagen" title="Myke towers">
                         </div>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/beckyG.jpeg" alt="No se pued ver la imagen" title="Becky G">
                         </div>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/feid.jpeg" alt="No se pued ver la imagen" title="Feid">
                         </div>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/Invisibles.jpeg" alt="No se pued ver la imagen" title="Los amigos invisibles">
                         </div>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/rawayanajpeg.jpeg" alt="No se pued ver la imagen" title="Rawayana">
                         </div>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/mora.jpeg" alt="No se pued ver la imagen" title="Mora">
                         </div>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/badbunny.jpeg" alt="No se pued ver la imagen" title="bad Bunny">
                         </div>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/red.jpeg" alt="No se pued ver la imagen" title="Red hot chill peppers">
                         </div>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/Jbalvin.jpeg" alt="No se pued ver la imagen" title="J balvin">
                         </div>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/Ozuna.jpeg" alt="No se pued ver la imagen" title="Ozuna">
                         </div>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/travis.jpeg" alt="No se pued ver la imagen" title="Travis Scott">
                         </div>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/Drake.jpeg" alt="No se pued ver la imagen" title="Drake">
                         </div>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/JustinQuiles.jpeg" alt="No se pued ver la imagen" title="Justin Quiles">
                         </div>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongItems">
                         <div class="Imagen__play">
                             <img src="../imagen/jhaycortez.jpeg" alt="No se pued ver la imagen" title="Jhay Cortez">
                         </div>
