--- a/code/index.html
+++ b/code/index.html
@@ -304,9 +304,9 @@
             <span id="EndItems">0:00</span>
 
             <div class="vol__music">
-                <i class="bi bi-volume-up"></i>
+                <i class="bi bi-volume-up" id="Vol--icon"></i>
                 <input id="seek--vol" min="0" value="0" max="100" type="range">
-                <div class="bar__vol2"></div>
+                <div class="bar__vol2" id="bar"></div>
                 <div class="dotted__music"></div>
             </div>
         </div>
