Backend finished in the project, time to make it beautiful

--- a/code/index.html
+++ b/code/index.html
@@ -198,8 +198,8 @@
                     <div class="Title__h4">
                         <h4>Popular Singer</h4>
                         <div class="Btn__icon">
-                            <i id="Left--scroll--panel"class="bi bi-arrow-left-short"></i>
-                            <i id="right--scroll--panel"class="bi bi-arrow-right-short"></i>
+                            <i id="Left--scrolls--panel"class="bi bi-arrow-left-short"></i>
+                            <i id="right--scrolls--panel"class="bi bi-arrow-right-short"></i>
                         </div>
                     </div>
                 </div>
@@ -307,7 +307,7 @@
                 <i class="bi bi-volume-up" id="Vol--icon"></i>
                 <input id="seek--vol" min="0" value="0" max="100" type="range">
                 <div class="bar__vol2" id="bar"></div>
-                <div class="dotted__music"></div>
+                <div class="dotted__music" id="vol__dot"></div>
             </div>
         </div>
     </header>
