--- a/code/index.html
+++ b/code/index.html
@@ -113,16 +113,16 @@
                     </div>
                 </div>
                 <div class="Music">
-                    <li class="SongItmes">
+                    <li class="SongMusic">
                         <div class="Imagen__play">
-                            <img src="../imagen/SaturnoRauw.jpeg" alt="No se pued ver la imagen">
+                            <img src="../imagen/7.jpeg" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill" id="7"></i>
                         </div>
                         <h5>Verde Menta
                             <div class="subtitle">Rauw Alejandro</div>
                         </h5>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/AfrodisiacoRauw.jpeg" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill" id="8"></i>
@@ -131,7 +131,7 @@
                             <div class="subtitle">Rauw Alejandro</div>
                         </h5>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/Bigsoto.jpg" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill" id="9"></i>
@@ -140,7 +140,7 @@
                             <div class="subtitle">Big Soto</div>
                         </h5>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/MoraParaiso.jpeg" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill" id="10"></i>
@@ -149,7 +149,7 @@
                             <div class="subtitle">Mora</div>
                         </h5>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/BadBunny100pre.jpeg" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill" id="11"></i>
@@ -158,7 +158,7 @@
                             <div class="subtitle">Bad Bunny</div>
                         </h5>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/MoraEstrella.jpeg" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill" id="12"></i>
@@ -167,7 +167,7 @@
                             <div class="subtitle">Mora</div>
                         </h5>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/BadBunnyYHLQMDLG.JPEG" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill" id="13"></i>
@@ -176,7 +176,7 @@
                             <div class="subtitle">Bad Bunny</div>
                         </h5>
                     </li>
-                    <li class="SongItmes">
+                    <li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/BadBunnySalir.png" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill" id="14"></i>
@@ -184,7 +184,7 @@
                         <h5>Bye me fui
                             <div class="subtitle">Bad Bunny</div>
                         </h5>
-                    </li><li class="SongItmes">
+                    </li><li class="SongMusic">
                         <div class="Imagen__play">
                             <img src="../imagen/OzunaOdisea.jpeg" alt="No se pued ver la imagen">
                             <i class="bi bi-play-circle-fill" id="15"></i>
