--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
     <title>Page--Music</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="../fonts/font.css">
-    <link rel="icon" href="https://icons.veryicon.com/png/o/miscellaneous/small-yellow-icon/music-273.png" type="image/png">
+    <link rel="icon" href="https://previews.123rf.com/images/butenkow/butenkow1612/butenkow161202015/67425651-logotipo-de-m%C3%BAsica-de-dise%C3%B1o-de-patr%C3%B3n-ilustraci%C3%B3n-de-vector-de-icono.jpg" type="image/png">
 </head>
 <body>
     <header>
